--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,22 @@
+2003-04-14  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/10377
+	* gcc.dg/20030414-1.c: New test.
+
+2003-04-13  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/10300
+	* g++.dg/init/new5.C: New test.
+
+2003-04-12  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/7910
+	* g++.dg/ext/dllimport1.C: New test.
+
+2003-04-12  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/ultrasp8.c: Fix for 32-bit Sparc.
+
 2003-04-11  Bud Davis  <bdavis9659@comcast.net>
 
 	PR Fortran/9263
