--- a/libmudflap/ChangeLog
+++ b/libmudflap/ChangeLog
@@ -1,3 +1,12 @@
+2003-04-15  Frank Ch. Eigler  <fche@redhat.com>
+
+	* mf-hooks.c (MF_VALIDATE_EXTENT): Remove unnecessary reentrancy
+	prevention code.
+	* mf-runtime.c (__mf_set_default_options): Turn off
+	check-initialization.
+	(__mf_describe_object): Shorten description.
+	* testsuite/libmudflap.c/fail25-frag.c: Turn on check-initialization.
+
 2003-04-07  Frank Ch. Eigler  <fche@redhat.com>
 
 	* mf-hooks.c (__mf_0fn_mmap): Correct return value, as per <rth>.
