--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,29 @@
+2003-04-20  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/10405
+	* search.c (lookup_field_1): Final scan goes backwards for
+	types, forwards for non-types.
+
+2003-04-15  Jason Merrill  <jason@redhat.com>
+
+	* decl2.c (mark_used): Don't instantiate anything if
+	skip_evaluation.
+
+2003-04-15  Mark Mitchell  <mark@codesourcery.com>
+
+	* init.c (build_new_1): Use nullexp instead of null_node to avoid
+	unwanted macro expansion.
+
+2003-04-14  Ziemowit Laski  <zlaski@apple.com>
+
+	* tree.c (build_cplus_array_type_1): Do not call
+	uses_template_parms() on a NULL index_type.
+
+2003-04-14  Andreas Schwab  <schwab@suse.de>
+
+	* init.c (build_new_1): Test use_cookie instead of cookie_size to
+	avoid code-gen bug on ia64.
+
 2003-04-13  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/10300
