--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,17 @@
+2003-04-16  Tom Tromey  <tromey@redhat.com>
+
+	* libjava.mauve/xfails: Added some more failing tests.
+
+2003-04-16  Mark Mitchell  <mark@codesourcery.com>
+
+	PR middle-end/8866
+	* libjava.lang/PR8866.java: New test.
+
+2003-04-16  Andrew Haley  <aph@redhat.com>
+
+	* libjava.lang/Throw_2.java (main): Make a successful test produce
+	some output.
+
 2003-03-10  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.lang/initfield.java: New file.
