cvs update -jgcc-3_2-branch:200304{08,23}
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@65996 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-22  Release Manager
+
+	* GCC 3.2.3 Released.
+
 2003-04-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* include/ffi.h.in [POWERPC64] (FFI_CLOSURE): Define to 1.
