--- a/boehm-gc/ChangeLog
+++ b/boehm-gc/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-22  Release Manager
+
+	* GCC 3.2.3 Released.
+
 2003-04-07  Tom Tromey  <tromey@redhat.com>
 
 	* include/private/gcconfig.h (LINUX_STACKBOTTOM): Define for
