--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,55 @@
+2003-04-22  Release Manager
+
+	* GCC 3.2.3 Released.
+
+2003-04-16  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	PR/10271
+	* pa-protos.h (function_arg): Remove last argument.
+	* pa.c (function_arg): Likewise.  Use CUMULATIVE_ARGS struct instead.
+	* pa.h (struct hppa_args): Add member incoming. 
+	(INIT_CUMULATIVE_ARGS, INIT_CUMULATIVE_INCOMING_ARGS): Initialize
+	member incoming.
+	(FUNCTION_ARG): Revise call to function_arg.
+	(FUNCTION_INCOMING_ARG): Delete.
+
+2003-04-15  Jason Merrill  <jason@redhat.com>
+
+	PR middle-end/10336, c++/10401
+	* jump.c (never_reached_warning): Also stop looking if we reach the 
+	beginning of the function.
+
+2003-04-14  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/10377
+	* config/cris/cris.md ("*mov_sideqi", "*mov_sidehi")
+	("*mov_sidesi", "*mov_sideqi_mem", "*mov_sidehi_mem")
+	("*mov_sidesi_mem", "*clear_sidesi", "*clear_sidehi")
+	("*clear_sideqi", "*ext_sideqihi", "*ext_sideqisi")
+	("*ext_sidehisi", "*op_sideqi", "*op_sidehi", "*op_sidesi")
+	("*op_swap_sideqi", "*op_swap_sidehi", "*op_swap_sidesi")
+	("*extopqihi_side", "*extopqisi_side", "*extophisi_side")
+	("*extopqihi_swap_side", "*extopqisi_swap_side")
+	("*extophisi_swap_side", 8th, 9th, 10th, 11th, 14th peepholes):
+	When next to constraint R, replace constraint i with n.
+
+2003-04-10  Bob Wilson  <bob.wilson@asm.org>
+
+	* config/xtensa/xtensa.h (MAX_INT_TYPE_SIZE, IMPLICIT_FIX_EXPR,
+	EASY_DIV_EXPR): Delete poisoned macro definitions.
+
+2003-04-09  Richard Henderson  <rth@redhat.com>
+
+	PR opt/10352
+	Tue Jul 23 21:49:24 2002  J"orn Rennecke <joern.rennecke@superh.com>
+	* simplify-rtx.c (simplify_subreg): When converting to a non-int
+	mode, try to convert to an integer mode of matching size first.
+
+2003-04-09  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.c (rs6000_emit_prologue): Use correct mode to
+	set frame pointer.
+
 2003-04-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/rs6000/rs6000.h (EPILOGUE_USES): Use register 2,
