--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-22  Release Manager
+
+	* GCC 3.2.3 Released.
+
 2003-02-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* root.texi: Bump version.
