--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,24 @@
+2003-04-22  Release Manager
+
+	* GCC 3.2.3 Released.
+
+2003-04-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+        Backport from mainline.
+
+        2003-03-17  Zack Weinberg  <zack@codesourcery.com>
+
+	        * objc.dg/naming-1.m: Use "(parse|syntax) error".
+	        * objc.dg/naming-2.m: Likewise.
+
+2003-04-14  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/10377
+	* gcc.dg/20030414-1.c: New test.
+
+2003-04-12  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/ultrasp8.c: Fix for 32-bit Sparc.
+
 2003-03-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.c-torture/execute/20020307-2.x: New file, XFAIL mips-irix6.
