--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-22  Release Manager
+
+	* GCC 3.2.3 Released.
+
 2003-04-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* configure.host (powerpc64-*-linux*): Use libffi and gij even if
